「このページについて」項目の追加

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                 <a>
                     <input id="sender" type="button" onclick="submit();" value="送信" />
                 </a>
+                <a id="about" type="button" href="about.html" >ページについて</a>
+
 </form>
     </body>
 </HTML>
