aboutのレイアウト変更

--- a/about.html
+++ b/about.html
@@ -3,13 +3,20 @@
      <meta charset"utf-8" />
      <title>about</title>
    <link rel="stylesheet" href="button.css" />
-   <script src="slackapi.js"></script>
 
    <meta name="viewport" content="width=device-width maximum-scale=1 minimum-scale=1 user-scalable=no" />
     </head>
     <body>
-        <div class="textAria">
-            Line風のデザインにする時に、そのままLineをコピーするのではなくWebページであることを意識した構成にしました。</br>
+        <div class="messagesContainer">
+                <div class="res">
+                <div class="myuser">TOSHIYA</div>
+                <img class="myuserImg"
+                     src="https://secure.gravatar.com/avatar/fc4a9ce13beedbfa15ac44deb1d4d3b6.jpg?s=72&amp;d=https%3A%2F%2Fa.slack-edge.com%2F00b63%2Fimg%2Favatars%2Fava_0025-72.png">
+                <div class="myrow">
+                <div class="message">
+                Line風のデザインにする時に、そのままLineをコピーするのではなくWebページであることを意識した構成にしました。      
+                <div class=""></div>
+                </div></div><div class="mytime">XX XX:XX</div></div>
             
         </div>
     </body>
