--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
      <meta charset"utf-8" />
      <title>slackapi</title>
-   <link rel="stylesheet" href="button.css" />
+   <link rel="stylesheet" href="slackapi.css" />
    <script src="slackapi.js"></script>
 
    <meta name="viewport" content="width=device-width maximum-scale=1 minimum-scale=1 user-scalable=no" />
