関数名称変更 　変数宣言位置の整理 　jsonパース実行箇所の変更

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <textarea
                     class="textBox"
                     name='textBox'
-                    onChange='alertValue(this)'
+                    onChange='SaveText(this)'
                     rows="3" cols="50" wrap="hard"/></textarea>
                 <input type="text" style="display:none;"/>
                 <a>
