about.htmlについて 　戻るボタン実装 　画面幅によるデザイン崩れ修正

--- a/about.html
+++ b/about.html
@@ -2,22 +2,23 @@
     <head>
      <meta charset"utf-8" />
      <title>about</title>
-   <link rel="stylesheet" href="button.css" />
+   <link rel="stylesheet" href="about.css" />
 
    <meta name="viewport" content="width=device-width maximum-scale=1 minimum-scale=1 user-scalable=no" />
     </head>
     <body>
         <div class="messagesContainer">
                 <div class="res">
-                <div class="myuser">TOSHIYA</div>
-                <img class="myuserImg"
+                <div class="aboutuser">TOSHIYA</div>
+                <img class="aboutuserImg"
                      src="https://secure.gravatar.com/avatar/fc4a9ce13beedbfa15ac44deb1d4d3b6.jpg?s=72&amp;d=https%3A%2F%2Fa.slack-edge.com%2F00b63%2Fimg%2Favatars%2Fava_0025-72.png">
-                <div class="myrow">
+                <div class="aboutrow">
                 <div class="message">
                 Line風のデザインにする時に、そのままLineをコピーするのではなくWebページであることを意識した構成にしました。      
                 <div class=""></div>
-                </div></div><div class="mytime">XX XX:XX</div></div>
+                </div></div><div class="abouttime">XX XX:XX</div></div>
             
         </div>
+        <a  class="backBtn" type="button" href="index.html" >もどる</a>
     </body>
 </HTML>
