メッセージの長さによって吹き出しの大きさを変更 　ページ遷移時の送信バグ修正 　ページロード時に最新のメッセージの位置にスクロール位置をずらすように修正

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a>
                     <input id="sender" type="button" onclick="submit();" value="送信" />
                 </a>
-                <a id="about" type="button" href="about.html" >ページについて</a>
+                <a  id="about" type="button" href="about.html" onclick="transPage();">ページについて</a>
 
 </form>
     </body>
